--- a/index.html
+++ b/index.html
@@ -1,1 +1,34 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>JavaScript Fundamentals</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  <h1>Welcome to JavaScript Fundamentals!</h1>
+
+  <div id="userInputSection">
+    <label for="userName">Enter your name:</label>
+    <input type="text" id="userName">
+    <button onclick="greetUser()">Greet Me</button>
+  </div>
+
+  <p id="greetingMessage"></p>
+
+  <div>
+    <h2>Loop Example</h2>
+    <button onclick="showCountdown()">Start Countdown</button>
+    <ul id="countdownList"></ul>
+  </div>
+
+  <div>
+    <h2>Toggle Example</h2>
+    <button onclick="toggleText()">Toggle Text</button>
+    <p id="toggleTarget">This text can be toggled!</p>
+  </div>
+
+  <script src="script.js"></script>
+</body>
+</html>
 
